--- a/analysis/ctwas_paper_figures.Rmd
+++ b/analysis/ctwas_paper_figures.Rmd
@@ -418,7 +418,6 @@ traits <- c(
   "SBP-ukb-a-360", 
   "T1D-GCST90014023",
   "T2D-panukb",
-  "ATH_gtexukb",
   "BMI-panukb",
   "HB-panukb",
   "Height-panukb",
@@ -659,14 +658,8 @@ print(plots)
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.height=6, fig.width=6}
-traits <- c("LDL-ukb-d-30780_irnt", "IBD-ebi-a-GCST004131", "aFib-ebi-a-GCST006414",
-             "SBP-ukb-a-360", "T1D-GCST90014023", "T2D-panukb", "BMI-panukb", "HB-panukb",
-             "Height-panukb", "HTN-panukb", "PLT-panukb", "RBC-panukb", "WBC-ieu-b-30", "SCZ-ieu-b-5102")
-mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
-mapping_munro     <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/Munro_mapping.RDS")
-mapping_table <- rbind(mapping_predictdb, mapping_munro)
-out <- plot_avg_genes_per_locus_across_traits(traits, mapping_table,
-                                               pp4_cut = 0.8, combined_pip_cut = 0.8)
+data <- readRDS("/project/xinhe/shengqian/cTWAS_paper_figures/data/figure_data/avg_genes_per_locus.RDS")
+out <- plot_avg_genes_per_locus_across_traits(data)
 ```
 
 ### Figure S12: Comparison of number of signals per region between M-cTWAS, Coloc and TWAS (other traits)
@@ -883,7 +876,7 @@ for(i in names(trait_list)){
 ## Figure 5: cTWAS discovers candidate genes for complex traits and provides insights on their molecular mechanisms 
 
 ### Figure 5a: cTWAS helps identify causal modality and context
-```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=4, fig.width=7}
+```{r echo=FALSE, message=FALSE, warning=FALSE,fig.height=5, fig.width=7}
 folder_results_single <- "/project/xinhe/xsun/multi_group_ctwas/22.singlegroup_0515/ctwas_output/expression/"
 folder_results_multi <- "/project/xinhe/xsun/multi_group_ctwas/23.multi_group_0515/snakemake_outputs/"
 trait <- "LDL-ukb-d-30780_irnt"
@@ -935,16 +928,10 @@ aa$plot
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results='hide', fig.width= 7, fig.height= 6}
-mapping_predictdb <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/PredictDB_mapping.RDS")
-mapping_munro     <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/mapping_files/Munro_mapping.RDS")
-mapping_table <- rbind(mapping_predictdb, mapping_munro)
-snp_map <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/LD_region_info/snp_map.RDS")
-traits <- c("LDL-ukb-d-30780_irnt","IBD-ebi-a-GCST004131","aFib-ebi-a-GCST006414",
-            "SBP-ukb-a-360","T1D-GCST90014023","T2D-panukb","BMI-panukb","HB-panukb",
-            "Height-panukb","HTN-panukb","PLT-panukb","RBC-panukb","WBC-ieu-b-30","SCZ-ieu-b-5102")
-
-res <- make_ctwas_category_boxplot(traits, mapping_table, snp_map)
-print(res$plot)
+data <- readRDS("/project/xinhe/shengqian/cTWAS_paper_figures/data/figure_data/novel_gene_category.RDS")
+data <- data$data
+p <- make_ctwas_category_boxplot(data)
+print(p)
 ```
 
 ### Figure S16: Novel gene category for other traits
